--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Store HTML form submissions in Google Sheets">
   <link href="./favicon.png" rel="shortcut icon">
 
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
   
   <script src="https://unpkg.com/prefixfree@1.0.0/prefixfree.min.js"></script>
   <script src="https://wzrd.in/standalone/formdata-polyfill@latest"></script>
